--- a/Desafio 10 - Motores de Plantilla/Views/index.hbs
+++ b/Desafio 10 - Motores de Plantilla/Views/index.hbs
@@ -1,29 +1,50 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-12 text-center">
-            <h1 class="display-6 text-dark">LIST OF PRODUCTS</h1>
+        <div class="col-6">
+            <div class="col-12 card">
+                <div class="card-body">
+                    <form action="/" method="POST">
+                        <input type="text" placeholder="Ingrese Nombre del Producto..." name="title"
+                            class="form-control mt-2" />
+                        <input type="number" placeholder="Ingrese Precio del Producto..." name="price"
+                            class="form-control mt-2" />
+                        <input type="text" placeholder="Ingrese Thumbnail del Producto..." name="thumbnail"
+                            class="form-control mt-2" />
+                        <button type="submit" class="btn btn-success btn-block w-100 mt-2">Enviar</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="col-12">
-            <table class="table table-striped table-dark">
-                <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Thumbnail</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each Productos}}
-                    <tr>
-                        <th scope="row">{{this.id}}</th>
-                        <td>{{this.title}}</td>
-                        <td>{{this.price}}</td>
-                        <td>{{this.thumbnail}}</td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>
+        <div class="col-12 mt-5">
+            <div class="col-12 text-center">
+                <div class="card">
+                    <div class="card-body">
+                        <h6 class="display-6 text-dark">LIST OF PRODUCTS</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <table class="table table-striped table-dark">
+                    <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Thumbnail</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each Productos}}
+                        <tr>
+                            <th scope="row">{{this.id}}</th>
+                            <td>{{this.title}}</td>
+                            <td>${{this.price}}</td>
+                            <td>{{this.thumbnail}}</td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
